[package]
name = "rust-torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
percent-encoding = "2.3.1"
reqwest = { version = "0.11.26", features = ["blocking"] }
serde = "1.0.197"
serde_bencode = "0.2.4"
serde_bytes = "0.11.14"
serde_derive = "1.0.197"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
url = { version = "2.5.0" }
